# rust-cktap

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cargo.toml.MSRV  Justfile  LICENSE  README.md  clippy.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: audit.yml  test.yml
cktap-ffi/: Cargo.toml  cktap-uniffi-bindgen.rs
cktap-ffi/src/: error.rs  lib.rs  sats_card.rs  sats_chip.rs  tap_signer.rs
cktap-swift/: Package.swift  build-xcframework.sh  justfile
cktap-swift/Tests/CKTapTests/: CKTapTests.swift  CardEmulator.swift  SmartCardTest.entitlements
cli/: Cargo.toml
cli/src/: main.rs
examples/: pcsc.rs
lib/: Cargo.toml  build.rs
lib/examples/: pcsc.rs
lib/src/: apdu.rs  commands.rs  emulator.rs  error.rs  factory_root_key.rs  ffi.rs  lib.rs  pcsc.rs  psbt.rs  rust-cktap.udl  sats_card.rs  sats_chip.rs  shared.rs  tap_signer.rs
lib/src/apdu/: tap_signer.rs
src/: apdu.rs  commands.rs  factory_root_key.rs  lib.rs  pcsc.rs
