[package]
name = "cktap-ffi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cktap_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
rust-cktap = { path = "../lib" }
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "1.0"

[features]
default = []