[package]
name = "cktap-ffi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cktap_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "cktap-uniffi-bindgen"
path = "cktap-uniffi-bindgen.rs"

[dependencies]
rust-cktap = { path = "../lib" }

uniffi = { version = "=0.29.4", features = ["cli"] }
thiserror = "1.0"

[features]
default = []