[package]
name = "cktap-ffi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "cktap_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "cktap-uniffi-bindgen"
path = "cktap-uniffi-bindgen.rs"

[dependencies]
rust-cktap = { path = "../lib" }

async-trait = "0.1.81"
futures = "0.3.30"
thiserror = "1.0"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = ["cli", "tokio"] }

[features]
default = []