[package]
name = "cktap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-cktap = { path = "../lib", features = ["pcsc"] }
pcsc = { version = "2" }
clap = { version = "4.3.1", features = ["derive"] }
rpassword = { version = "7.2" }
tokio = { version = "1", features = ["full"] }

[features]
emulator = ["rust-cktap/emulator"]
