[package]
name = "rust-cktap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "rust_cktap"

[dependencies]
ciborium = "0.2.0"
serde = "1"
serde_bytes = "0.11"

# async
tokio = { version = "1.44", features = ["macros"] }

# error handling
thiserror = "2.0"

# bitcoin
bitcoin = { version = "0.32", features = ["rand-std"] }

# logging
log = "0.4"

# uniffi todo: make this optional
uniffi = { version = "0.29.1", features = ["cli"] }

pcsc = { version = "2", optional = true }

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }

[features]
default = []
emulator = []

[[example]]
name = "pcsc"
required-features = ["pcsc"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
