[package]
name = "rust-cktap"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
name = "rust_cktap"

[dependencies]
ciborium = "0.2.0"
serde = "1"
serde_bytes = "0.11"

# async
tokio = { version = "1.44", features = ["macros"] }

# error handling
thiserror = "2.0"

# bitcoin
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoin_hashes = "0.16.0"

# logging
log = "0.4"

# pcsc as optional
pcsc = { version = "2", optional = true }

[dev-dependencies]

tokio = { version = "1.44", features = ["rt"] }

[features]
default = []
emulator = []

[[example]]
name = "pcsc"
required-features = ["pcsc"]
