[package]
name = "rust-cktap"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A Rust implementation of the Coinkite Tap Protocol (cktap) for use with SATSCARD, TAPSIGNER, and SATSCHIP products."
keywords = ["bitcoin", "wallet", "smartcard", "cktap"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
name = "rust_cktap"

[dependencies]
ciborium = "0.2.0"
serde = "1"
serde_bytes = "0.11"

# async
async-trait = "0.1.81"
tokio = { version = "1.44", features = ["macros"] }

# error handling
thiserror = "2.0"

# bitcoin
bitcoin = { version = "0.32.7", features = ["rand-std", "base64"] }
miniscript = { version = "12.3" }
bitcoin_hashes = "0.16.0"
data-encoding = "2.6"

# logging
log = "0.4"

# pcsc as optional
pcsc = { version = "2", optional = true }

[dev-dependencies]

tokio = { version = "1.44", features = ["rt"] }
bdk_wallet = { version = "2.1.0", features = ["all-keys","test-utils"] }

[features]
default = []
emulator = []
